2009-06-01  Richard Earnshaw  <rearnsha@arm.com>

	* arm/thumb2.md (thumb2_zero_extendhidi2): New insn and split.
	(thumb2_extendhidi2): Likewise.

2009-05-31  Ian Lance Taylor  <iant@google.com>

	* regstat.c (regstat_n_sets_and_refs): Remove duplicate
	definition.

2009-05-31  Ian Lance Taylor  <iant@google.com>

	* Makefile.in (except.o): Depend upon gt-except.h, not
	gt-$(EXCEPT_H).
	(ipa-cp.o): Depend upon $(FIBHEAP_H) and $(PARAMS_H).
	(ipa-reference.o): Depend upon gt-ipa-reference.h.

2009-05-31  Jason Merrill  <jason@redhat.com>

	* tree-pretty-print.c (print_call_name): Take the callee, not the
	call itself.  Make non-static.  Use dump_function_name for
	functions.
	(dump_generic_node): Adjust.
	* diagnostic.h: Declare print_call_name.
	* gimple-pretty-print.c (dump_gimple_call): Use it.

2009-05-31  Kaz Kojima  <kkojima@gcc.gnu.org>

	* config/sh/sh.md (ashldi3_std): New define_expand.
	(ashldi3): Use it.

2009-05-31  Kaz Kojima  <kkojima@gcc.gnu.org>

	PR target/40313
	* config/sh/sh.c: Include debug.h.
	(sh_expand_epilogue): Emit a blockage insn before the frame
	pointer adjustment also when dwarf2out_do_frame returns true.

2009-05-31  Richard Earnshaw  <rearnsha@arm.com>

	* arm/thumb2.md (thumb2_extendsidi2): Add a split sub-pattern.
	(thumb2_extendqidi2): New pattern.

2009-05-31  Ira Rosen  <irar@il.ibm.com>

	* tree-vect-loop-manip.c (slpeel_update_phi_nodes_for_guard1): Don't
	mark phis for renaming.
	* tree-vectorizer.c (vect_memsyms_to_rename): Remove.
	(vectorize_loops): Don't allocate and free vect_memsyms_to_rename.
	Call mark_sym_for_renaming.
	* tree-vectorizer.h (vect_memsyms_to_rename): Remove.
	* tree-vect-loop.c (vect_transform_loop): Remove vect_memsyms_to_rename
	initialization and a call to mark_set_for_renaming.

2009-05-31  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/40304
	* config/i386/i386.c (pro_epilogue_adjust_stack): Mark insns
	frame related even if !set_cfa && style < 0.
